nginx.pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx
  labels:
    name: my-nginx
    rel: stable
spec:
  containers:
    - name: my-nginx
      image: nginx:alpine
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 80
      livenessProbe:
        httpGet:
          path: /index.html
          port: 80
        initialDelaySeconds: 15
        timeoutSeconds: 2 # Default is 1
        periodSeconds: 5 # Default is 10
        failureThreshold: 1 # Default is 3
      readinessProbe:
        httpGet:
          path: /index.html
          port: 80
        timeoutSeconds: 2 # Default is 1
        periodSeconds: 5 # Default is 10
        failureThreshold: 1 # Default is 3

# kubectl create -f nginx.pod.yml --save-config
# kubectl get pod [pod-name] -o yaml/json
# kubectl describe pod [pod-name]
# kubectl apply -f nginx.pod.yml
# kubectl exec [pod-name] -it sh
# kubectl edit -f [name of config file]
# kubectl delete -f nginx.pod.yml
