clusterIP.service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip
spec:
  type: ClusterIP
  selector:
    app: my-nginx
  ports:
    - port: 8080 # external port (8080:80)
      targetPort: 80 # enternal port (8080:80)
