nodeport.service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  type: NodePort
  selector:
    app: my-nginx
  ports:
    - port: 80 # port forwards to targetPort 80
      targetPort: 80 # target port of node
      nodePort: 31000 # automatically assigned if not provided, port forwards to - port: 80
